Always substitute RFB in place of LaunchWrapper